security: 修复3个P0安全漏洞 + 后端启动问题
P0漏洞修复（Agent 3红蓝军测试发现）:
1. CORS配置：从允许任意源改为白名单(localhost:3017/5173)
2. 知识库未授权：移除/knowledge/**的permitAll配置
3. 登录锁定失效：移除Redis依赖，使用LoginAttemptCache

后端启动问题修复:
- KnowledgeArticleInitService：大小写表名检查
- WorkReportInitService：表存在检查替代DROP策略

验证证据（32个攻击测试）:
- CORS：恶意源evil.com被拒绝，localhost:3017被允许
- 知识库：无token返回401（修复前返回200）
- 登录锁定：第5次失败后锁定30分钟

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>